<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/bg_login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:src="@mipmap/ic_app_logo"
            android:layout_gravity="center"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@mipmap/bg_login_card"
            android:padding="@dimen/dp_40">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:background="@mipmap/bg_edit_text"
                        android:padding="@dimen/dp_10"
                        android:gravity="center_vertical">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@mipmap/ic_user"/>

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginStart="@dimen/dp_10"
                            android:background="@null"
                            android:hint="@string/edit_hint_phone"
                            android:textColorHint="#999999"
                            android:textSize="15sp"
                            android:minLines="2"
                            android:padding="@dimen/dp_3"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:background="@mipmap/bg_edit_text"
                        android:layout_marginTop="@dimen/dp_14"
                        android:padding="@dimen/dp_10"
                        android:gravity="center_vertical">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@mipmap/ic_pwd"/>

                        <EditText
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="match_parent"
                            android:layout_marginStart="10dp"
                            android:background="@null"
                            android:hint="@string/edit_hint_pwd"
                            android:textColorHint="#999999"
                            android:textSize="15sp"
                            android:minLines="2"
                            android:padding="@dimen/dp_3"/>

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@mipmap/ic_edit_line" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/dp_20"
                            android:layout_marginEnd="@dimen/dp_10"
                            android:textColor="#ff2cbcff"
                            android:textSize="14sp"
                            android:text="58秒" />

                    </LinearLayout>

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dp_30"
                        android:background="@mipmap/btn_logon_bg"
                        android:textSize="17sp"
                        android:textColor="#FFFFFF"
                        android:text="@string/btn_login"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/dp_17"
                        android:text="@string/btn_pwd_login"
                        android:textColor="#84B9FF"
                        android:textSize="14sp"/>

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_alignParentBottom="true">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tv_tps_login"
                        android:textColor="#84B9FF"
                        android:textSize="9sp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dp_15"
                        android:text="@string/tv_company"
                        android:textColor="#ff929292"
                        android:textSize="9sp"/>

                </LinearLayout>

            </RelativeLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>